objects/Module__c.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Copado</fullName>
                </value>
                <value>
                    <fullName>DevOps 360</fullName>
                </value>
                <value>
                    <fullName>ClickDeploy</fullName>
                </value>
                <value>
                    <fullName>Advance Data Deployer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Product_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Modules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QA_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QA Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Modules2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release_Status__c</fullName>
        <label>Release Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GA</fullName>
                    <default>true</default>
                    <label>GA</label>
                </value>
                <value>
                    <fullName>Beta</fullName>
                </value>
                <value>
                    <fullName>Pilot</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Definition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stability_Icon__c</fullName>
        <formula>IMAGE( 
CASE(  Stability__c , 
&quot;Stable&quot;, &quot;/img/samples/flag_green.gif&quot;,
&quot;Uncertain&quot;, &quot;/img/samples/flag_yellow.gif&quot;,
&quot;Unstable&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;Stability Flag&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stability Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stability__c</fullName>
        <defaultValue>&quot;Stable&quot;</defaultValue>
        <label>Stability</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Stable</fullName>
                </value>
                <value>
                    <fullName>Uncertain</fullName>
                </value>
                <value>
                    <fullName>Unstable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team</label>
        <referenceTo>copado__Team__c</referenceTo>
        <relationshipLabel>Modules</relationshipLabel>
        <relationshipName>Modules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Technical_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technical Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Modules1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Module</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Application__c</columns>
        <columns>NAME</columns>
        <columns>Product_Manager__c</columns>
        <columns>Technical_Owner__c</columns>
        <columns>QA_Owner__c</columns>
        <columns>Stability_Icon__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Copado_Modules</fullName>
        <columns>NAME</columns>
        <columns>Release_Status__c</columns>
        <columns>Stability__c</columns>
        <columns>Stability_Icon__c</columns>
        <columns>Product_Manager__c</columns>
        <columns>Team__c</columns>
        <columns>Application__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stability__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Copado Modules</label>
    </listViews>
    <nameField>
        <label>Module Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Modules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>